# etl_engine

./: CMakeLists.txt  README.md
schemas/: schema.json
src/: api_client.cpp  api_client.h  json_parser.cpp  json_parser.h  json_valid.cpp  json_valid.h  main.cpp
